--- a/index.html
+++ b/index.html
@@ -4,18 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <style>
-    div{
-        font-size: 100px;
+    #ans{
+        margin-left:10px;
+        font-size: 80px;
     }
+
+    #change{
+        margin-top:10px;
+        margin-left:10px;
+        font-size: 40px;
+    }
+
+    #selection{
+        margin-left:10px;
+        font-size: 20px;
+        margin-top:30px;
+        display: flex;
+        flex-direction: column;
+    }
+    #prev,#next{
+        margin-top:10px;
+        margin-left:10px;
+    }
+    #x1{
+        margin-bottom: 15px;
+    }
+
 </style>
 <body>
 
-    <div id="ans"></div>
+    <div id="ans">Answers</div>
 
-    <button id="prev">Previous</button>
-    <button id="next">Next</button>
+    <button id="prev" class="btn btn-danger">Previous</button>
+    <button id="next" class="btn btn-warning">Next</button>
+    <div id="change">Currently Using : None</div>
+    <div id="selection">
+        <div id="x1">
+            <button class="btn btn-success" id="b1">Programming 01</button>
+            <button class="btn btn-success" id="b2">Programming 02</button>
+            <button class="btn btn-success" id="b3">Programming 03</button>
+            <button class="btn btn-success" id="b4">Programming 04</button>
+            <button class="btn btn-success" id="b5">Programming 05</button>
+        </div>
+        <div>
+            <button class="btn btn-primary" id="b6">Aptitude 02</button>
+            <button class="btn btn-primary" id="b7">Aptitude 03</button>
+            <button class="btn btn-primary" id="b8">Aptitude 04</button>
+            <button class="btn btn-primary" id="b9">Aptitude 05</button>
+        </div>
+    </div>
 
     <script src="./ans.js"></script>
     
